--- a/bower.json
+++ b/bower.json
@@ -39,7 +39,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "~1.2.0",
-    "angular-sanitize": "~1.2.0"
+    "angular": ">=1.2.0",
+    "angular-sanitize": ">=1.2.0"
   }
 }
